Basic html outline

--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPS</title>
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class = "hero">
+        <h1>Rock Paper Scissors</h1>
+        <p class = "rules">Can you beat the computer?</p>
+    </div>
+
+    <div class = "playerButtons">
+        <button class = "playerOption">Rock</button>
+        <button class = "playerOption">Paper</button>
+        <button class = "playerOption">Scissors</button>
+    </div>
+
+    <div class="choices">
+        <h2>Player</h2>
+        <p class="playerChoice">Updates based on button</p>
+
+        <h2>Computer</h2>
+        <p class="computerChoice">Updates randomly</p>
+    </div>
+
+    <div class="results">
+        <h2>Results</h2>
+        <p class="result-text">Changes per round and game completion</p>
+    </div>
 </body>
 </html>
