--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <div class = "hero">
+    <div class="hero">
         <h1>Rock Paper Scissors</h1>
-        <p class = "rules">Can you beat the computer?</p>
+        <p class="rules">Can you beat the computer?</p>
     </div>
 
     <div class = "playerButtons">
-        <button class = "playerOption">Rock</button>
-        <button class = "playerOption">Paper</button>
-        <button class = "playerOption">Scissors</button>
+        <button id="rock" class="playerChoiceBtn">Rock</button>
+        <button id="paper" class="playerChoiceBtn">Paper</button>
+        <button id="scissors" class="playerChoiceBtn">Scissors</button>
     </div>
 
     <div class="choices">
