Stops playing after either player gets to 5 points

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
         <h2>Results</h2>
         <p class="result-text">Changes per round and game completion</p>
     </div>
+
+    <div>
+        <button class="replay">New Game</button>
+    </div>
 </body>
 </html>
