Functional game, new game button

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </div>
 
     <div class="choices">
-        <h2>Player</h2>
+        <h2 class="player-name player">Player</h2>
         <p class="playerChoice">Updates based on button</p>
 
-        <h2>Computer</h2>
+        <h2 class="player-name computer">Computer</h2>
         <p class="computerChoice">Updates randomly</p>
     </div>
 
