Updated footer links

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </div>
 
     <div class="footer">
-        <a href="google.com">RPS Repo</a>
+        <a href="https://github.com/git-kv/RockPaperScissors">RPS Repo</a>
         <p>Copyright Keith Voelker 2023</p>
-        <a href="google.com">My Projects</a>
+        <a href="https://github.com/git-kv/">My Projects</a>
     </div>
 </body>
 </html>
